# reinforcement_learning

./: pyproject.toml
notebooks/: bandits.ipynb
src/MAB/: bandits.py
src/case_studies/: contextual_user.py
src/models/: regularised_logistic.py
