[project]
name = "rl"
version = "0.1.0"
description = "Implementing RL algorithms"
authors = [
    {name = "Erick Hinds Mingo (erickhindsmingo@gmail.com)"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (==1.26.4)",
    "jax-metal (>=0.1.1,<0.2.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ray (>=2.48.0,<3.0.0)",
    "rlib (>=0.0.2,<0.0.3)",
    "gym (>=0.26.2,<0.27.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "cufflinks (>=0.17.3,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev-dependencies.dependencies]
ruff = "^0.12.4"

