[tool.poetry]
name = "rl"
version = "0.1.0"
description = "Implementing RL algorithms"
authors = ["Erick Hinds Mingo <erickhindsmingo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "MAB", from = "src" },
    { include = "case_studies", from = "src" },
    { include = "models", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "==1.26.4"
jax-metal = ">=0.1.1,<0.2.0"
pandas = ">=2.3.1,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ray = ">=2.48.0,<3.0.0"
rlib = ">=0.0.2,<0.0.3"
gym = ">=0.26.2,<0.27.0"
plotly = "4.14.3"
cufflinks = ">=0.17.3,<0.18.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

